--- a/systemgh/src/App.css
+++ b/systemgh/src/App.css
@@ -1,3 +1,5 @@
+
+
 .home-container {
   text-align: center;
   padding: 20px;
@@ -7,10 +9,14 @@
   background-color: #4CAF50;
   color: white;
   padding: 20px;
-  display: flex; /* Torna o header um contêiner flexível */
-  justify-content: space-between; /* Espaça os itens */
-  align-items: center; /* Alinha verticalmente os itens */
+  display: flex;
+  /* Torna o header um contêiner flexível */
+  justify-content: space-between;
+  /* Espaça os itens */
+  align-items: center;
+  /* Alinha verticalmente os itens */
 }
+
 .home1-header {
   background-color: #4CAF50;
   color: white;
@@ -35,8 +41,10 @@
   font-size: 16px;
   line-height: 1.6;
 }
+
 .system-name {
-  text-align: left; /* Alinha o texto à esquerda */
+  text-align: left;
+  /* Alinha o texto à esquerda */
 }
 
 .system-name h1 {
@@ -61,59 +69,6 @@
   width: 100%;
   border-top: 1px solid #ccc;
 }
-.login-container {
-  width: 300px;
-  margin: 100px auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  background-color: #f9f9f9;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-.login-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.form-group input {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.login-btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.login-btn:hover {
-  background-color: #45a049;
-}
-
-.error-message {
-  color: red;
-  margin-top: 10px;
-  font-size: 14px;
-}
-
 .nav-bar {
   background-color: #4CAF50;
   padding: 10px 20px;
@@ -142,3 +97,60 @@
   text-decoration: underline;
 }
 
+.login-container {
+  width: 300px;
+  margin: 100px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input {
+  width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.login-btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.login-btn:hover {
+  background-color: #45a049;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+  font-size: 14px;
+}
