--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,73 @@
+.registration-container {
+  width: 600px;
+  margin: 100px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  text-align: justify;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.form-group-btn {
+  display: inline-block; /* Faz o botão se comportar como um bloco */
+  margin-bottom: 10px; /* Adiciona um espaço abaixo do botão */
+  padding: 10px 15px; /* Ajusta o preenchimento para o botão */
+  background-color: #4CAF50; /* Cor de fundo verde */
+  color: white; /* Cor do texto do botão */
+  border: none; /* Remove a borda padrão */
+  border-radius: 5px; /* Bordas arredondadas */
+  cursor: pointer; /* Muda o cursor para indicar que é clicável */
+  text-align: center; /* Garante que o texto fique centrado */
+  font-size: 16px; /* Tamanho de fonte */
+  transition: background-color 0.3s; /* Transição suave ao passar o mouse */
+}
+
+.form-group-btn:hover {
+  background-color: #45a049; /* Cor do botão ao passar o mouse */
+}
+
+.submit-btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 15px;
+  margin-right: auto;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.submit-btn:hover {
+  background-color: #45a049;
+}
+
+.patient-image {
+  margin-top: 10px;
+  max-width: 100%;
+  height: auto;
+
+}
+
 .home-container {
   text-align: center;
   padding: 20px;
+  width: au;
 }
 
 .home-header {
@@ -33,8 +100,8 @@
 
 .admin-buttons {
   display: flex;
-  justify-content:center;
-  gap: 30px; 
+  justify-content: center;
+  gap: 30px;
 }
 
 .user-info {
@@ -70,6 +137,7 @@
   width: 100%;
   border-top: 1px solid #ccc;
 }
+
 .nav-bar {
   background-color: #4CAF50;
   padding: 10px 20px;
@@ -164,7 +232,8 @@ h2 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.logs-table th, .logs-table td {
+.logs-table th,
+.logs-table td {
   padding: 12px 15px;
   text-align: center;
   border: 1px solid #ddd;
@@ -234,6 +303,7 @@ h2 {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
 .filters button:hover {
   background-color: #45a049;
 }
