refector: Refatora Registros de pacinete extraindo componentes modular e ajusta demais arquivos

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,8 @@
 .admin-buttons {
   display: flex;
   justify-content: center;
-  gap: 30px;
+  align-items: center;
+  gap: 10px;
 }
 
 .user-info {
