feat: adiciona crud medico

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,33 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.doctor-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  flex-direction: column; 
+  padding: 20px;
+}
+
+.doctor-card {
+  background-color: #f9f9f9;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  text-align: justify; 
+  max-width: 600px; 
+}
+
+.doctor-photo {
+  width: 200px; 
+  height: 200px; 
+ text-align: center;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 
 /*************************************/
 
